chore(shiftr): update javadoc and unit test